<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beige">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:src="@drawable/profle_image" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/username"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="360dp"
            android:backgroundTint="@color/mediumBrown"
            android:layout_marginBottom="0dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/account_detail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/text_background_darker"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/account_detail"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/text_background_darker"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/about"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/text_background_darker"
                android:text="@string/faq"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="220dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/logout_background_btn"
                android:text="@string/log_out"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>