<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="true"
    android:layout_width="350dp"
    android:layout_height="240dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="0dp"
    android:backgroundTint="@color/brown_light"
    app:cardElevation="2dp"
    app:cardCornerRadius="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv_movImage_user"
            android:layout_width="350dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/no_image"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/tv_movName_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="140dp"
            android:fontFamily="@font/fontbold"
            android:text="@string/movie_name"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/fontregular"
            android:text="@string/mov_rating"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_movRat_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/fontregular"
            android:text="@string/mov_totalrat"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>