<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:textColorHint="@color/white_light"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="@color/white_light"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
        app:startIconTint="@color/white_light">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_id_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/white_light"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="@color/white_light"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup"
        app:layout_constraintTop_toBottomOf="@id/et_name_signup"
        app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
        app:startIconTint="@color/white_light">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/white_light"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:counterOverflowTextColor="@color/white_light"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/white_light"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup"
        app:layout_constraintTop_toBottomOf="@id/et_email_id_signup"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:startIconTint="@color/white_light">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_re_password_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/re_enter_your_password"
        android:textColorHint="@color/white_light"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:counterOverflowTextColor="@color/red"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/white_light"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup"
        app:layout_constraintTop_toBottomOf="@id/et_password_signup"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:startIconTint="@color/white_light">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white_light"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/brown"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup"
        app:layout_constraintTop_toBottomOf="@id/et_re_password_signup" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textview_refer_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="6dp"
        android:focusable="true"
        android:text="@string/already_have_a_account_login_then"
        android:textColor="@color/white_light"
        android:textStyle="bold"
        app:drawableTint="@color/white_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end_signup"
        app:layout_constraintStart_toEndOf="@id/guideline_start_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>